--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 nltk==3.6.7
-numpy==1.22.0
-pandas==1.3.5
-scikit-learn==1.0.2
-scipy==1.7.3
+numpy>=1.22.0
+pandas>=1.3.5
+scikit-learn>=1.0.2
+scipy>=1.7.3
 decorator==5.0.9
